# brvtalcake.github.io

./: .gitignore  .gitmodules  Cargo.toml  Dioxus.toml  Pipfile  README.md  TODO  brvtalcake-github-io.cabal  config.toml  go.mod  go.sum  hugo.yaml  index.html  pelicanconf.py  publishconf.py  serve.py  stack.yaml
.github/: dependabot.yml
.github/workflows/: zola.yml
assets/: main.css  router.css
content/: _index.md  about.md  by-lang.md
content/by-language/: _index.md  english.md  french.md
content/posts/: configuration.md  markdown.md  math-symbol.md  miab.md  test-post.md
content/projects/: supdef.md  zerOS.md
css/: default.css
js/: _test.js  main.js  scripts.js  tree.js  tree.ts
output/: archives.html  authors.html  categories.html  index.html  tags.html
public/: 404.html  index.html  index.xml  sitemap.xml  styles.css.map
public/categories/: index.html  index.xml
public/posts/: index.html  index.xml
public/posts/test-post/: index.html
public/tags/: index.html  index.xml
resources/_gen/assets/css/: base.scss_983d0fd8c6b35648423ca86087665cef.content
src/: brower.rs  lib.rs  main.rs  route.rs
src/layout/: default.rs
src/pages/: home.rs  mod.rs  not_found.rs
src/pages/blog/: mod.rs
stylesheets/: style.css
templates/: _giscus_script.html  taxonomy_list.html  taxonomy_single.html
templates/partials/: header.html
themes/: apollo
